[JRCLUST (JRC) change log]
J. James Jun

--------------------------------------------------------------------
[2017/10/27: v3.1.1]
Bugfix: PSTH time offset error is removed (0.01 s previously)
Manual GUI: Speed improvement when selecting a unit.
Bugfix: raw waveform display fixed for the manual GUI. 
  Waveforms did not display if you used an older .prm file
New paramter: fInterp_fet = 1 (default), set to 0 to disable this new feature since v3.0.8
  This interpolates the spike waveforms 2x and finds the optimal time-lag to project the principal vector.
New paramter: fDrift_merge = 1 (default). Set to 0 to disable this new feature since v3.0.8
  This compares mean unit waveforms at three drift locations based on the spike position (CoM).
New paramter: nInterp_merge = 2 (default), set to 1 to disable this new feature since v3.0.8
  This compares mean unit waveforms at three drift locations based on the spike position (CoM).
Bugfix: Annotations previously got deleted when deleting clusteres using "delete-auto" command.
Manual GUI: "auto-merge" to automatically merge units based on the waveform correlations.

[2017/10/26: v3.1.0]
Bugfix: raw waveform display fixed for the manual GUI. 
  Waveforms did not display if you used an older .prm file
'fir1' filter is supported for "vcFilter" parameter.
  Finite Impulse Response filter
  The frequency range is sett by "freqLim=[f_low, f_high]" parameter.
New default: Detection threshold set to "qqFactor = 5".
  Increasing the detection threshold can incorrectly merge large amplitude units with background noise.
New default: Auto-calculation of maxSite and nSites_ref based on the physical distance.
  maxSite=[] and nSites_ref=[] will automatically set it based on the site spacing and layout.
  The parameter "maxDist_site_um" is used to determine the number of sites used for features (default 50 um)
  The parameter "maxDist_site_spk_um" is used to determine the number of reference sites (default 75 um)

[2017/10/25: v3.0.9]