@@ -12,8 +12,8 @@ path_alpha = 'C:\Dropbox (HHMI)\Git\jrclust_alpha';         % folder containing 
 path_sample_phase2 = {'https://www.dropbox.com/s/t0my3nf8dmpzmr6/sample.meta?dl=1', 'https://www.dropbox.com/s/9y1d22da4f83b3m/sample.bin?dl=1'};  
 path_sample_phase3 = {'https://www.dropbox.com/s/9vuldabqw68ilpa/sample3.meta?dl=1', 'https://www.dropbox.com/s/lcowg4c9f4xiat5/sample3.bin?dl=1'};
 sync_list = {'jrc3_gui.fig', 'img/', 'prb/', 'neuroshare/', 'kilosort/', 'default.prm', '*.txt', '*.m', '*.ptx', '*.cu', 'default.cfg', 'template.cfg', 'JRCLUST manual.pdf', 'sample_sample_merge.prm', 'sample.meta', 'template_*.prm'};   % list of files to synchronize
-sync_list_ver2 = {'JRCLUST manual.pdf', 'img/', 'prb/', 'jrc2.m', 'jrc.m', 'jrc1.m', 'jrclust.m', 'plotSpikeRaster.m', 'default.prm', 'change_log.txt', 'default.cfg', 'fft_clean.m', 'filtfilt_chain.m', 'multiplot.m', 'plot_raster.m', 'clusterVerify.m', 'mouse_figure.m', 'get0.m', 'install.txt', 'sample_sample_merge.prm', 'sample.meta', 'kilosort.m', 'initialize_waves0.m', 'mexMPregMUcpu.m'};  % required for jrc2
-sync_list_ver3 = {'JRCLUST manual.pdf', 'isosplit.m', 'sample_list.txt', 'jrc3_gui.fig', 'jrc3_gui.m', 'img/', 'prb/', 'neuroshare/', 'kilosort/', 'jrc3_test.m', 'jrc3.m', 'jrc2.m', 'jrc.m', 'jrc1.m', 'jrclust.m', 'plotSpikeRaster.m', 'default.prm', 'change_log.txt', 'default.cfg', 'fft_clean.m', 'filtfilt_chain.m', 'multiplot.m', 'plot_raster.m', 'clusterVerify.m', 'mouse_figure.m', 'get0.m', 'install.txt', 'sample_sample_merge.prm', 'sample.meta', 'kilosort.m', 'initialize_waves0.m', 'mexMPregMUcpu.m'};  % required for jrc3
+sync_list_ver2 = {'JRCLUST manual.pdf', 'img/', 'prb/', 'jrc2.m', 'jrc.m', 'jrc1.m', 'jrclust.m', 'plotSpikeRaster.m', 'default.prm', 'change_log.txt', 'default.cfg', 'fft_clean.m', 'filtfilt_chain.m', 'multiplot.m', 'plot_raster.m', 'clusterVerify.m', 'mouse_figure.m', 'get0.m', 'install.txt', 'sample_sample_merge.prm', 'sample.meta', 'kilosort.m'};  % required for jrc2
+sync_list_ver3 = {'JRCLUST manual.pdf', 'isosplit.m', 'sample_list.txt', 'jrc3_gui.fig', 'jrc3_gui.m', 'img/', 'prb/', 'neuroshare/', 'kilosort/', 'jrc3_test.m', 'jrc3.m', 'jrc2.m', 'jrc.m', 'jrc1.m', 'jrclust.m', 'plotSpikeRaster.m', 'default.prm', 'change_log.txt', 'default.cfg', 'fft_clean.m', 'filtfilt_chain.m', 'multiplot.m', 'plot_raster.m', 'clusterVerify.m', 'mouse_figure.m', 'get0.m', 'install.txt', 'sample_sample_merge.prm', 'sample.meta', 'kilosort.m'};  % required for jrc3
 csFiles_cu = {'eucldist_sorted_rho.cu', 'citydist_sorted_rho.cu', 'eucldist_sorted_rho_exp.cu', 'eucldist_sorted_delta.cu', 'citydist_sorted_delta.cu'};    % CUDA source files
 csFiles_cu3 = {'jrc3_cuda_delta.cu', 'jrc3_cuda_rho.cu', 'eucldist_sorted_rho.cu', 'citydist_sorted_rho.cu', 'eucldist_sorted_rho_exp.cu', 'eucldist_sorted_delta.cu', 'citydist_sorted_delta.cu'};    % CUDA source files
 csFiles_ptx = {'eucldist_sorted_rho.ptx', 'citydist_sorted_rho.ptx', 'eucldist_sorted_rho_exp.ptx', 'eucldist_sorted_delta.ptx', 'citydist_sorted_delta.ptx'};    % CUDA source files
